<resources>
    <string name="app_name">KUMIWAKE</string>
    <string name="decide">Decide</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="do_kumiwake">kumiwake!</string>
    <string name="Do_delete">Are you sure to delete?</string>
    <string name="about_kumiwake">About KUMIWAKE</string>
    <string name="select_member">select</string>
    <string name="about_sekigime">About seat allocation</string>
    <string name="about_member">About member</string>
    <string name="advertise_delete">Delete advertisement(purchase)</string>
    <string name="app_version">App version</string>
    <string name="back_up_db">Backup data</string>
    <string name="cancel">Cancel</string>
    <string name="choose_app">Choose App</string>
    <string name="delete_backup">Delete backed-up file</string>
    <string name="delete_backup_attention">If you don\'t need current backed-up file anymore, delete it as following.\n\nOnce you delete backed-up file, it will be no longer restore the data.\n\nAre you sure you want to delete the current backed-up file?</string>
    <string name="deleted_backup_file">Backed-up file was deleted.</string>
    <string name="filtering">Filtering</string>
    <string name="failed_backup">Failed to backup data.</string>
    <string name="error_has_occurred">An error has occurred.</string>
    <string name="age">Age</string>
    <string name="all_select">Select all</string>
    <string name="data">Data</string>
    <string name="back_up_completed">Backup was completed.</string>
    <string name="contact_us">Contact us</string>
    <string name="how_to_use">How to use</string>
    <string name="import_db">Import data</string>
    <string name="import_completed">Import was completed.</string>
    <string name="kumiwake">Grouping</string>
    <string name="sekigime">Seating</string>
    <string name="share_app">Share App</string>
    <string name="share_result">Share Result</string>
    <string name="sex">Gender</string>
    <string name="sorting">Sorting</string>
    <string name="setting_help">Setting/Help</string>
    <string name="selected">" selected"</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="member_ascending">Number of members order(ASC)</string>
    <string name="member">Member</string>
    <string name="member_name">Name</string>
    <string name="name_ascending">Alphabetical order(ASC)</string>
    <string name="name_descending">Alphabetical order(DESC)</string>
    <string name="member_descending">Number of members order(DESC)</string>
    <string name="leader">Leader</string>
    <string name="no_selected">No selected</string>
    <string name="input_required">*Required</string>
    <string name="kumiwake_result">KUMIWAKE Result</string>
    <string name="move_custom">move to custom</string>
    <string name="move_confirmation">move to confirmation</string>
    <string name="all">All</string>
    <string name="normal_mode">Normal mode</string>
    <string name="nothing">Nothing</string>
    <string name="people">ppl</string>
    <string name="quick_mode">Quick mode</string>
    <string name="retry_title">Try Again</string>
    <string name="retry">try again</string>
    <string name="re_kumiwake_description">Execute KUMIWAKE(grouping) again on the same conditions.</string>
    <string name="re_sekigime_description">Execute Seat Allocation again on the same conditions.(* Only the order in the table will be changed.)</string>
    <string name="re_order_description">Execute order deciding again on the same conditions.</string>
    <string name="re_assign_description">Execute the assignment again on the same conditions.</string>
    <string name="re_drawing_description">Restart the drawing from the beginning.</string>
    <string name="re_classroom_description">Execute changing seats again on the same conditions.</string>
    <string name="retry_finished">Retry finished</string>
    <string name="registered">registered</string>
    <string name="registration">register</string>
    <string name="registration_ascending">Registration order(ASC)</string>
    <string name="registration_descending">Registration order(DESC)</string>
    <string name="clear">clear</string>
    <string name="back_to_initial_mbNo">previous number</string>
    <string name="age_ascending">Age order(ASC)</string>
    <string name="age_descending">Age order(DESC)</string>
    <string name="belong">Belong</string>
    <string name="not_exist_file">Backed-up file doesn\'t exist.</string>
    <string name="number_of_member">Number of members</string>
    <string name="other">Other</string>
    <string name="not_mounted">SD card is not mounted.</string>
    <string name="update">update</string>
    <string name="updated">is updated</string>
    <string name="even_out_age_ratio">To equalize the age ratio</string>
    <string name="even_out_male_female_ratio">To equalize the gender ratio</string>
    <string name="go_home">back to home</string>
    <string name="go_sekigime">sekigime with these groups</string>
    <string name="fm_placed_alternately">Arrange men and women alternately</string>
    <string name="group">Group</string>
    <string name="counter_table">Counter table</string>
    <string name="circle_table">Circle table</string>
    <string name="be_custom">*Need customize</string>
    <string name="add_group_title">Create a new group</string>
    <string name="add_member_title">Create a new member</string>
    <string name="kumiwake_confirm">Execute KUMIWAKE(grouping) as the following contents.</string>
    <string name="no_group">NO GROUP</string>
    <string name="no_member">NO MEMBER</string>
    <string name="parallel_table">Square table(Parallel)</string>
    <string name="information">Information</string>
    <string name="search_view">search</string>
    <string name="go_select_seats_type">move to select table</string>
    <string name="select_seats_type">Please select table type.</string>
    <string name="square_table">Square table(Enclose)</string>
    <string name="single_square_type">One side</string>
    <string name="double_square_type">Both sides</string>
    <string name="seat_no">the Number of seats</string>
    <string name="run">execute</string>
    <string name="select_leader">Select/Deselect leader by tapping</string>
    <string name="square_custom_deployment">the disposition of seats</string>
    <string name="square_custom_select_no">the Designation of the number of seats</string>
    <string name="square_custom_select_no_description">Please designate the number of seats which are located single short side.</string>
    <string name="square_custom_description">Setting for short side of the table</string>
    <string name="square_custom_deployment_description">If short side exist both sides, please select \"Both sides\".Otherwise, if short side exist only one side, please select \"One side\".</string>
    <string name="sekigime_confirm">Execute SEKIGIME(Seats Allocation) as the following contents.</string>
    <string name="re_sekigime_finished">Re:Disposition finished.</string>
    <string name="re_kumiwake_finished">Re:KUMIWAKE finished.</string>
    <string name="seats_type_confirmation">Execute as the following table type.</string>
    <string name="require_correct_No">Please input a correct number.</string>
    <string name="number_of_groups_is_much_too">The number of groups exceeds the number of members</string>
    <string name="error_empty_group">Please input the group name.</string>
    <string name="error_empty_name">Please input the member name.</string>
    <string name="error_empty_group_no">Please input the number of groups.</string>
    <string name="error_empty_member_no">Please input the number of members.</string>
    <string name="error_empty_member_list">Please add members.</string>
    <string name="belong_member">Members who belong</string>
    <string name="group_name">Group name</string>
    <string name="adviceToDecideInGroupFL">*The members that belonging selected group are selected.</string>
    <string name="range_error">Specified range is incorrect.</string>
    <string name="number_of_groups">Number of groups</string>
    <string name="require_member_select">Add members</string>
    <string name="run_confirmation">\nMay you proceed?</string>
    <string name="kumiwake_conditions">Grouping conditions</string>
    <string name="select_group_info">Set group names and number of the belong members.</string>
    <string name="how_to_kumiwake">☆It is the mode of grouping☆\n\nSelect from "Normal mode" or "Quick mode" and execute grouping.</string>
    <string name="how_to_member">☆It is the mode of register members for \"KUMIWAKE\" and \"SEKIGIME\"☆\n\nSwitch member list or group list by swiping.\n\nOn each screen, you click the \'+\' button which is displayed by the screen lower right, and you can add new member or new group.\n\nBy registering members to the group, you can select all members which belong the group at once when you do "KUMIWAKE" and so on.</string>
    <string name="how_to_sekigime">☆It is the mode of seat allocation☆  Assign seats by specifying members and groups. Procedure of selecting members and groups are the same as KUMIWAKE.  You can also do SEKIGIME from KUMIWAKE result page. In this case, the seating is performed in groups in each group created by KUMIWAKE.</string>
    <string name="article_title">\"Easy,Convenient and Fair\"\n☆KUMIWAKE is coming up!!☆\nApplication of auto-grouping and seat positioning can be!\nVery useful for group activities!!\n↓↓Click here for download↓↓\n(Android only)</string>
    <string name="back_up_attention">Data of members and groups will be backed up.\n\nIf you proceed backup, current backed-up data will be deleted and overwritten with the new data.*Data is written to the SD card.\n</string>
    <string name="import_attention">Data of members and groups are imported.\n\nIf you proceed import data, current member data and group data are deleted and overwritten with the new data.\n</string>
    <string name="description_of_normal">This is a mode by selecting from registered members.\nYou can set the group name and the number of the belong members for each group.</string>
    <string name="description_of_quick">This is a mode by designating the number of members and groups.\nYou need not do annoying setting and you can do quick grouping.</string>
    <string name="member_name_read">Read</string>
    <string name="please_permit">Please permit the use of storage.</string>
    <string name="privacy_policy">Privacy policy &amp; Credits</string>
    <string name="continue_register">Continue</string>
    <string name="error">Error</string>
    <string name="nothing_file">Backed-up file doesn\'t exist in</string>
    <string name="failed_import">Data import failed.\nPush \"OK\" and try again with put the back-up file in</string>
    <string name="failed_to_mkdirs">Failed to make backup directory on SD card.\nPush \"OK\" and try again with change file pass to </string>
    <string name="app_exit_confirmation">Quit app?</string>
    <string name="edit_exit_confirmation">Quit edit?\nEdits are discarded.</string>
    <string name="hint">hint</string>
    <string name="show_all">Show all</string>
    <string name="sekigime_result">Seating result</string>
    <string name="history">History</string>
    <string name="share_with_text">Share with text</string>
    <string name="change_age">Change age</string>
    <string name="purchasing_text">Ad removal purchase</string>
    <string name="purchased_history">Purchase history</string>
    <string name="title">Title</string>
    <string name="add_group">Add group</string>
    <string name="comment">comment</string>
    <string name="include_title">include title</string>
    <string name="include_comment">include comment</string>
    <string name="input_comment">Input comment</string>
</resources>