<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_view"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_view"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/delete" />

    <item
        android:id="@+id/item_all_select"
        android:icon="@drawable/ic_select_all_black_24dp"
        android:title="@string/all_select"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_sort"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/sorting"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_filter"
        android:icon="@drawable/ic_filter_list_black_24dp"
        android:title="@string/filtering"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_change_age"
        android:icon="@drawable/ic_cake_black_24dp"
        android:title="@string/change_age"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>
