<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_kumiwake">

    <fragment
        android:id="@+id/navigation_kumiwake"
        android:name="com.pandatone.kumiwake.ui.kumiwake.KumiwakeFragment"
        android:label="@string/kumiwake"
        tools:layout="@layout/fragment_kumiwake" />

    <fragment
        android:id="@+id/navigation_sekigime"
        android:name="com.pandatone.kumiwake.ui.sekigime.SekigimeFragment"
        android:label="@string/sekigime"
        tools:layout="@layout/fragment_sekigime" />

    <fragment
        android:id="@+id/navigation_members"
        android:name="com.pandatone.kumiwake.ui.members.MembersFragment"
        android:label="@string/member" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.pandatone.kumiwake.ui.settings.SettingsFragment"
        android:label="@string/setting_help"
        tools:layout="@layout/fragment_members" />
</navigation>