<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#10ff6f00"
    android:orientation="vertical"
    android:parentActivityName=".MemberMain">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/request_background"
        android:text="@string/add_group"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/group_form_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/form_marginStart"
        android:layout_marginTop="@dimen/form_marginTop"
        android:layout_marginEnd="@dimen/form_marginEnd"
        android:hint="@string/group_name"
        app:helperText="@string/input_required">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="textPersonName"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/form_marginStart"
        android:layout_marginTop="@dimen/form_marginTop"
        android:text="@string/belong_member"
        android:textColor="#424242"
        android:textSize="20sp" />

    <include
        android:id="@+id/add_group_listview"
        layout="@layout/part_review_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/form_between_margin" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/form_marginEnd"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/group_cancel_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/orange" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/group_registration_btn"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/registration"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

    </LinearLayout>
</LinearLayout>