<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/info_margin"
                android:text="@string/how_to_use"
                android:textColor="@color/green" />

            <ListView
                android:id="@+id/how_to_use_list"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/info_margin"
                android:text="@string/data"
                android:textColor="@color/green" />

            <ListView
                android:id="@+id/back_up_list"
                android:layout_width="match_parent"
                android:layout_height="270dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/info_margin"
                android:text="@string/other"
                android:textColor="@color/green" />

            <ListView
                android:id="@+id/other_list"
                android:layout_width="match_parent"
                android:layout_height="330dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>